Update nexus-staging-plugin to 1.6.8. Add --add-opens required by staging plugin